--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -71,7 +71,7 @@ jobs:
           go-version: '1.18'
 
       - name: Test
-        run: go test -v ./...
+        run: go test -race -v ./...
 
   build:
     runs-on: ubuntu-latest
@@ -84,4 +84,4 @@ jobs:
         go-version: '1.18'
 
     - name: Build
-      run: go build -v ./...
+      run: go build -race -v ./...
